Fix: username not visible on every page.
Fix:#1

--- a/p2preview/static/p2preview/css/base.css
+++ b/p2preview/static/p2preview/css/base.css
@@ -43,6 +43,10 @@ body {
 	visibility: visible;
  	transform: scaleX(1);
  }
+ 
+ .hideItem{
+ 	display: none;
+ }
  .emphasize{
  	font-weight: bold;
  	font-size: x-large;
